src/objects/BusinessGroup__c.object
<CustomObject>
    <fields>
        <fullName>BGR_Banner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Banner</label>
        <referenceTo>Banner__c</referenceTo>
        <relationshipLabel>Business Groups</relationshipLabel>
        <relationshipName>Business_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGR_BypassProcess__c</fullName>
        <label>Bypass Process</label>
        <picklist>
            <picklistValues>
                <fullName>P08 - BGR - Init Business Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P09 - BGR - Set Generic User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P10 - BGR - Flag all accounts related to selected banner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BGR_Geography__c</fullName>
        <globalPicklist>GeographiesList</globalPicklist>
        <label>Geography</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BGR_Network__c</fullName>
        <globalPicklist>NetworkList</globalPicklist>
        <label>Network</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BGR_ParentBusinessGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Business Group</label>
        <referenceTo>BusinessGroup__c</referenceTo>
        <relationshipLabel>Children Business Groups</relationshipLabel>
        <relationshipName>BusinessGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGR_PrimaryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Business Groups</relationshipLabel>
        <relationshipName>BusinessGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGR_PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Groups</relationshipLabel>
        <relationshipName>BusinessGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGR_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buying Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Business Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Groups</pluralLabel>
    <recordTypes>
        <fullName>AccountBusinessGroup</fullName>
        <active>true</active>
        <description>Business Group of Accounts</description>
        <label>Account Business Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>OwnerBusinessGroup</fullName>
        <active>true</active>
        <description>Business Group of Owners</description>
        <label>Owner Business Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR02_BGR_MandatoryBanner</fullName>
        <active>true</active>
        <description>Enforce users to fill in &quot;Banner&quot; field if Type = &quot;Banner&quot;</description>
        <errorConditionFormula>NOT(INCLUDES($User.USER_BypassValidationRule__c, &quot;VR02_BGR_MandatoryBanner&quot;)) &amp;&amp;
ISPICKVAL(BGR_Type__c, &quot;Banner&quot;) &amp;&amp;
BGR_Banner__c  = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>BGR_Banner__c</errorDisplayField>
        <errorMessage>Please select a banner.</errorMessage>
    </validationRules>
</CustomObject>